test_force_https_1

--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -37,6 +37,9 @@ http {
 
         # Proxy connections to express
         location @express {
+            if ($http_x_forwarded_proto != 'https') {
+              rewrite ^ https://$host$request_uri? permanent;
+            }
             proxy_pass         http://express;
             proxy_redirect     off;
             proxy_set_header   Host $host;
