test_force_https_3

--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -38,7 +38,7 @@ http {
         # Proxy connections to express
         location @express {
             if ($http_x_forwarded_proto != 'https') {
-              rewrite 301 https://$host$request_uri;
+              return 301 https://$host$request_uri;
             }
             proxy_pass         http://express;
             proxy_redirect     off;
