--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -31,6 +31,10 @@ http {
         # Listen on port 8080
         listen 8080;
 
+        if ($http_x_forwarded_proto != 'https') {
+          rewrite ^ https://$host$request_uri? permanent;
+        }
+
         root /app/public;
 
         try_files $uri/index.html $uri @express;
