config development environment

--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -31,10 +31,12 @@ http {
         # Listen on port 8080
         listen 8080;
 
+        # Forcing HTTPS
         if ($http_x_forwarded_proto != 'https') {
           rewrite ^ https://$host$request_uri? permanent;
         }
 
+        # For discover <3
         root /app/public;
 
         try_files $uri/index.html $uri @express;
