--- a/package.json
+++ b/package.json
@@ -7,18 +7,16 @@
   "author": "https://github.com/jsgcode",
   "license": "ISC",
   "scripts": {
-    "start": "node ./index.js",
+    "start": "nodemon",
     "start-dev": "nodemon --ignore ./node_modules"
   },
-  "dependencies": {
-    "express": "^4.16.3",
-    "helmet": "^3.12.0"
-  },
+  "dependencies": {},
   "devDependencies": {
     "autoprefixer": "^8.2.0",
     "browser-sync": "^2.23.6",
     "cssnano": "^3.10.0",
-    "gulp": "^3.9.1",
+    "del": "^3.0.0",
+    "gulp": "^4.0.0",
     "gulp-postcss": "^7.0.1",
     "gulp-pug": "^3.3.0",
     "gulp-purgecss": "^0.20.0",
