--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "devDependencies": {
     "autoprefixer": "^8.2.0",
     "browser-sync": "^2.23.6",
-    "cssnano": "^3.10.0",
+    "cssnano": "^4.0.0-rc.2",
     "del": "^3.0.0",
     "gulp": "^4.0.0",
     "gulp-postcss": "^7.0.1",
@@ -23,5 +23,8 @@
     "purgecss-from-html": "^1.0.0",
     "tailwindcss": "^0.5.1"
   },
-  "browserslist": ["> 1%", "last 2 versions"]
+  "browserslist": [
+    "> 1%",
+    "last 2 versions"
+  ]
 }
