--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "gulp": "^4.0.0",
     "gulp-postcss": "^7.0.1",
     "gulp-pug": "^3.3.0",
-    "gulp-sass": "^3.1.0",
-    "gulp-sourcemaps": "^2.6.4"
+    "gulp-sass": "^3.2.1",
+    "gulp-sourcemaps": "^2.6.4",
+    "node-sass": "^4.12.0"
   }
 }
